# Ambient

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  renderers.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: gpu.rs  texture.rs
crates/network/src/: client.rs
crates/network/src/native/: client.rs
crates/renderer/src/: globals.rs  globals.wgsl  renderer.rs  shadow_renderer.rs  target.rs
crates/xr/: Cargo.toml
crates/xr/src/: input.rs  lib.rs  rendering.rs  swapchain.rs
shared_crates/schema/src/schema/: xr.toml
